<resources>
    <string name="app_name">Magnifier</string>
    <string name="turn_on_camera">Turn on Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting">Setting</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading">Loading...</string>
    <string name="instruct_1">Tap here to turn on the flashlight.</string>
    <string name="instruct_2">Tap here to adjust the brightness.</string>
    <string name="instruct_3">Tap here to zoom out.</string>
    <string name="instruct_4">Tap here to take a photo.</string>
    <string name="instruct_5">Tap here to zoom in.</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="enable_permission">Enable Permission</string>
    <string name="permission_description">This app uses your camera to magnify images. Please enable camera permissions.</string>
    <string name="camera_access">Camera Access</string>
    <string name="success_message">Your image is saved successfully</string>
    <string name="instruct_cap">Use two fingers to\nzoom in or out on the image.</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="open">Open</string>
    <string name="convert_into_text">Convert into Text</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="image_saved">Image Saved</string>
    <string name="delete_confirm">Delete confirm?</string>
    <string name="delete_description">Are you sure you want to delete this photo?\nThis action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="multi_delete_description">Are you sure you want to delete these photos?\nThis action cannot be undone.</string>
    <string name="selected_items">%d selected</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="more_apps">More Apps</string>
    <string name="submit">Submit</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="feedback_hint">Typing your feedback</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="rate_description">Your good rating is very valuable for us.\nPlease take a minute to rate us.</string>
    <string name="send_review">Send Review</string>
</resources>
