<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_fragment_permiss"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_camera_access"
        android:layout_marginVertical="20dp"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/tv_camera_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        android:layout_marginVertical="20dp"
        android:text="@string/camera_access"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/bt_enable"
        app:layout_constraintEnd_toEndOf="@id/bt_enable"
        app:layout_constraintBottom_toTopOf="@id/bt_enable"
        android:layout_marginBottom="30dp"
        android:text="@string/permission_description"
        android:textSize="16sp"
        android:textColor="#4A4A4A"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp"
        android:background="@drawable/bg_seekbar_trans"
        android:backgroundTint="@color/blue"
        android:text="@string/enable_permission"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>