<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SettingFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back"
        android:background="@color/white"
        android:importantForAccessibility="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        android:layout_marginStart="20dp"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/ib_policy"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/black"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="aaa"
            android:textColor="#4D4D4D"
            android:textSize="18sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_policy"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_policy"
        android:background="@drawable/bg_buttons"
        android:backgroundTint="#E6F4FF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/ib_policy"
        app:layout_constraintEnd_toEndOf="@id/ib_policy"
        app:layout_constraintTop_toBottomOf="@id/ib_policy"
        android:layout_marginTop="10dp"
        android:text="@string/privacy_policy"
        android:textSize="18sp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>