<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="10dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/transparent"
    tools:context=".ui.GuidelineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-40dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_flash"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_buttons"
            android:contentDescription="Open Flash"
            android:src="@drawable/ic_flash"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/ll_brightness"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/ib_flash"
            app:layout_constraintEnd_toStartOf="@id/ib_setting"
            app:layout_constraintStart_toEndOf="@id/ib_flash"
            app:layout_constraintTop_toTopOf="@id/ib_flash"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_seekbar"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_sun_light" />

            <SeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:progress="30"
                android:progressTint="@color/blue"
                android:secondaryProgressTint="#C4C4CC"
                android:thumb="@drawable/ic_thumb" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_arrow_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ib_flash"
            app:layout_constraintStart_toEndOf="@id/ib_flash"
            app:layout_constraintTop_toBottomOf="@id/ib_flash"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_arrow"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/iv_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ll_brightness"
            app:layout_constraintStart_toStartOf="@id/ll_brightness"
            app:layout_constraintTop_toBottomOf="@id/ll_brightness"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_arrow"
            android:importantForAccessibility="no"
            android:visibility="invisible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_instruct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_arrow_1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_instruct"
            app:layout_constraintDimensionRatio="2:1">

            <TextView
                android:id="@+id/tv_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/tv_instruction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="1/5"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/bt_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_step"
                android:text="@string/instruct_1"
                android:textColor="#4A4A4A"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_next"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction"
                android:background="@drawable/bg_seekbar"
                android:backgroundTint="#129CFF"
                android:padding="15dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_setting"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="@id/ib_flash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ib_flash"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_buttons"
            android:contentDescription="Open Settings"
            android:src="@drawable/ic_setting"
            android:visibility="invisible"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_camera"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="70dp"
            android:background="@drawable/bg_camera"
            android:contentDescription="@string/turn_on_camera"
            android:src="@drawable/ic_capture"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_zoom_out"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/ib_camera"
            app:layout_constraintEnd_toStartOf="@id/ib_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ib_camera"
            android:background="@drawable/bg_buttons"
            android:contentDescription="Reduce Brightness"
            android:src="@drawable/ic_minus"
            android:visibility="invisible"
            app:layout_constraintDimensionRatio="1:1"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_zoom_in"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_camera"
            app:layout_constraintTop_toTopOf="@id/ib_camera"
            android:background="@drawable/bg_buttons"
            android:contentDescription="Increase Brightness"
            android:src="@drawable/ic_plus"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/ib_camera"
            app:layout_constraintDimensionRatio="1:1"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/iv_arrow_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ib_zoom_out"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@id/ib_zoom_out"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow"
            android:importantForAccessibility="no"
            android:scaleY="-1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_arrow_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ib_camera"
            app:layout_constraintEnd_toEndOf="@id/ib_camera"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow"
            android:importantForAccessibility="no"
            android:scaleY="-1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_arrow_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ib_zoom_in"
            app:layout_constraintStart_toStartOf="@id/ib_zoom_in"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow"
            android:importantForAccessibility="no"
            android:scaleX="-1"
            android:scaleY="-1"
            android:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>